# tunescore

./: .cursorrules  .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES_PLAN.md  AI_API_OPTIMIZATION.md  AI_ENHANCEMENT_PLAN.md  AI_FEATURES_STATUS.md  AI_INTEGRATION_COMPLETE.md  AI_PROVIDER_OPTIONS.md  AI_SECTION_DETECTION_FIX.md  AI_TRANSFORMATION_COMPLETE.md  COMPETITIVE_FEATURES_QUICKSTART.md  COMPETITIVE_FEATURES_SUMMARY.md  COMPETITIVE_INTEGRATION_COMPLETE.md  CSP_FIX.md  DEV_MODE.md  DOCKER_SETUP.md  FEATURE_IMPLEMENTATION_LOG.md  FFMPEG_INSTALL_STATUS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STEPS.md  FINAL_UPLOAD_FIX.md  FIX_BAD_GATEWAY.sh  FIX_MUSIC_QUILTY_APP.md  FRONTEND_DEPLOYED.md  FRONTEND_NAVIGATION_AUDIT.md  FRONTEND_READY.md  FRONTEND_SETUP.md  FRONTEND_SHOWCASE.md  HOST_HEADER_FIX.md  HOST_HEADER_FIX_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  INDUSTRY_PULSE_COMPLETE.md  INDUSTRY_PULSE_DEPLOYMENT_GUIDE.md  INDUSTRY_PULSE_FINAL_STATUS.md  INDUSTRY_PULSE_IMPLEMENTATION.md  INDUSTRY_PULSE_QUICKSTART.md  LIVE_SITE_STATUS.md  (+36 more)
backend/: .dockerignore  AI_COST_MONITORING.md  Dockerfile  MONITORING_QUICKSTART.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e79531f6eb0_initial_schema.py  1f4811637e38_add_ai_lyric_critique_to_analyses.py  23512442cf40_add_tunescore_and_genre_predictions_to_.py  297a635088b0_restore_industry_pulse_tables.py  2dd3344318de_add_quality_metrics_to_analyses.py  41e56b4b0beb_add_chord_analysis_to_analyses.py  46c90ae0ff06_add_industry_snapshot_tables.py  539639794bf8_add_lyrics_provenance_fields.py  5d8e1eef60bc_add_ai_costs_to_analysis.py  7c9a6cef9059_add_extra_data_to_daily_digest.py  8af3d2a30b9b_add_waitlist_table.py  8b047e948aa4_add_mastering_quality_to_analyses.py  f33fc2e17967_add_competitive_feature_models.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routers/: ai_tagging.py  audio.py  auth.py  health.py  integrations.py  monitoring.py  search.py  tracks.py  waitlist.py
backend/app/core/: config.py  database.py  security.py
backend/app/industry_snapshot/: __init__.py  aggregator.py  ai_digest.py  models.py  routes.py  scraper.py  trends.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/models/: __init__.py  track.py  user.py  waitlist.py
backend/app/schemas/: __init__.py  auth.py  industry_snapshot.py  track.py  waitlist.py
backend/app/services/: ai_cost_tracker.py
backend/app/services/ai_enhancement/: __init__.py  ai_breakout_predictor.py  ai_genre_reasoner.py  ai_hook_explainer.py
backend/app/services/ai_tagging/: __init__.py  mood_classifier.py  pitch_generator.py
backend/app/services/artist_intelligence/: __init__.py  snapshot_collector.py
backend/app/services/audio/: chord_analyzer.py  feature_extraction.py  harmonic_analysis.py  hook_detector_advanced.py  instrument_detection.py  mastering_analyzer.py  spectral_advanced.py  stem_separator.py  transcription.py
backend/app/services/catalog/: __init__.py  credits_fetcher.py  valuator.py
backend/app/services/classification/: __init__.py  genre_detector.py  genre_ml.py
backend/app/services/embeddings/: generator.py  search.py
backend/app/services/integrations/: spotify.py  youtube.py  youtube_analytics.py
backend/app/services/lyrics/: acquisition.py  ai_critic.py  ai_lyrics_critic.py  ai_section_detector.py  analysis.py  multilingual_analyzer.py  theme_extractor.py
backend/app/services/lyrics/providers/: __init__.py  lrclib.py
backend/app/services/prediction/: __init__.py  breakout_scorer.py  viral_detector.py
backend/app/services/scoring/: __init__.py  tunescore.py
backend/app/services/similarity/: artist_similarity.py
backend/docs/: API_MODEL_OPTIMIZATION.md
backend/files/1/16/: audio.m4a
backend/jobs/: __init__.py  artist_snapshots.py  industry_pulse.py  scheduler.py  viral_detection.py
backend/scripts/: add_recent_releases.py  check_and_fix_tracks.py  generate_viral_segments_for_track.py  monitor_ai_costs.py  populate_sample_data.py  prototype_mastering.py  reanalyze_all_tracks.py  reanalyze_all_tracks_ai.py  reanalyze_track_11.py  reanalyze_track_sections.py  recalculate_tunescores.py  run_industry_scraper.py  start_jobs.sh  test_ai_critic.py  test_chord_analysis.py  test_chord_integration.py  test_competitive_features.py  test_detect_genre_hybrid.py  test_genre_with_instrument_ensemble.py  test_huggingface_genre.py  test_instrument_detection.py  test_mastering_feature.py  test_pitch_generation.py
docs/: API.md  (+21 more)
(+91 files in other folders)
